@@ -59,5 +59,5 @@ Special topics: NarrowSpace plugin
 
 The NarrowSpace plugin currently handles only a small portions of the possible
 PARAMETERS possible:
-http://www.apple.com/quicktime/tutorials/embed2.html
+http://developer.apple.com/documentation/QuickTime/Conceptual/QTScripting_HTML/QTScripting_HTML_Document/chapter_1000_section_5.html
 
