@@ -1,5 +1,14 @@
 2008-06-09  Bastien Nocera  <hadess@hadess.net>
 
+	* browser-plugin/README.browser-plugin: Link to a page will _all_
+	the Quicktime plugin embed parameters
+	* browser-plugin/tests/2.html: Add some Don Quixote text to allow
+	use to test bug #343067
+	* browser-plugin/totemPlugin.cpp: Slight change of behaviour to
+	get the old behaviour back when using NPN_GetURL
+
+2008-06-09  Bastien Nocera  <hadess@hadess.net>
+
 	* browser-plugin/totemConePlaylist.cpp: Implement Playlist::isplaying,
 	(Closes: #526737)
 	* browser-plugin/totemNarrowSpacePlugin.cpp: Fix GetPluginStatus()
